<resources>
    <string name="app_name">MovieSearch</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="page_title_movie_news">Movie</string>
    <string name="page_title_movie_popular">Popular movies</string>
    <string name="page_title_movie_upcoming">Upcoming movies</string>
    <string name="page_title_movie_latest">Latest movies</string>
    <string name="page_title_search">Search movies</string>
    <string name="page_title_search_by_name">Search by Name</string>
    <string name="page_title_search_by_people">Search by People</string>
    <string name="page_title_search_by_category">Search by category</string>
    <string name="page_title_search_results">Search results</string>
    <string name="page_title_favorites">My Favorite movies</string>
    <string name="page_title_movie_description">About movie</string>
    <string name="movie_id">ID</string>
    <string name="date">Date</string>
    <string name="release_date">Release date</string>
    <string name="rating">Rating</string>
    <string name="top">Top</string>
    <string name="latest">Latest</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="system_language">en-EN</string>
    <string name="status">Status</string>
    <string name="budget">Budget</string>
    <string name="production">Production</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="triple_dot">...</string>
    <string name="loading">LOADING...</string>
    <string name="add_to_favorites">Add</string>
    <string name="remove_from_favorites">Delete</string>
    <string name="movie_deleted_from_favorites">Movie was deleted from Favorites</string>
    <string name="movie_add_to_favorites">Movie was added to Favorites</string>
    <string name="error_item_delete">Error while movie deleting</string>
    <string name="connection_ok">Internet connection is OK</string>
    <string name="no_connection">Internet connection failed</string>
    <string name="my_notes_about_tis_movie">My Notes about tis movie</string>
    <string name="my_rating">Rated by me</string>
    <string name="my_resume">Resume:</string>
    <string name="my_positive">Positivities:</string>
    <string name="my_negative">Negativities:</string>
    <string name="save">Save:</string>
    <string name="settings">Settings</string>
    <string name="settings_adult_enable">Adult content enabled</string>
    <string name="settings_file_name">SGMS_settings_file</string>
    <string name="settings_adult_key">isAdultEnabled</string>

</resources>