<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#070000"
        android:gravity="center_vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:gravity="center_vertical"
            app:menu="@menu/close_only_menu"
            app:title="@string/page_title_movie_description"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="8dp">


            <LinearLayout
                android:id="@+id/buttonAddToFavoritesL"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/b_favorites_button"
                android:elevation="2dp"
                android:gravity="center"
                android:onClick="addToFavorites"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/moviePoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/moviePoster"
                tools:visibility="invisible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="2dp">

                    <TextView
                        android:id="@+id/textView101"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/add_to_favorites"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView1"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_conversion_absoluteHeight="36dp"
                        tools:layout_conversion_absoluteWidth="100dp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_favorite_off"
                        tools:layout_conversion_absoluteHeight="24dp"
                        tools:layout_conversion_absoluteWidth="24dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonRemoveFromFavoritesL"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/b_favorites_button"
                android:elevation="2dp"
                android:gravity="center"
                android:onClick="removeFromFavorites"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/moviePoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/moviePoster"
                tools:visibility="invisible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="2dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/remove_from_favorites"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_conversion_absoluteHeight="36dp"
                        tools:layout_conversion_absoluteWidth="100dp" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_favorite_on"
                        tools:layout_conversion_absoluteHeight="24dp"
                        tools:layout_conversion_absoluteWidth="24dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/movieReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/movieBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/movieStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/status"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/moviePoster"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/budget"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/moviePoster"
                app:layout_constraintTop_toBottomOf="@+id/movieStatus" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/release_date"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/moviePoster"
                app:layout_constraintTop_toBottomOf="@+id/movieBudget" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/production"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/moviePoster"
                app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/genres"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate" />

            <TextView
                android:id="@+id/movieProduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/movieGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/overview"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieProduction" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#DDDDDD"
        android:visibility="invisible"
        tools:visibility="invisible">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/loading"
            android:textSize="16sp" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:alpha="1"
            android:elevation="2dp"
            android:indeterminate="true"
            android:indeterminateTint="#FFFFFF"
            android:progress="50"
            android:progressBackgroundTint="#FFFFFF"
            android:progressBackgroundTintMode="screen" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottomSheetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="35dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/noteHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/b_notes_header_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/container2Header"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="left|center_vertical"
                android:paddingStart="10dp"
                android:text="@string/my_notes_about_tis_movie"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

            <LinearLayout
                android:id="@+id/starsHeaderLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>