<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notesRootLayout"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    tools:context=".view.fragments.MyNotesFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainScrolledLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D0000000">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/my_resume"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/starCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible" />

            <EditText
                android:id="@+id/negativeTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/b_notes_background"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:padding="8dp"
                android:text="Interface that is implemented to discover when a Loader has finished loading its data. You do not normally need to implement this yourself; it is used in the implementation of LoaderManager to find out when a Loader it is managing has completed so that this can be reported to its client. This interface should only be used if a Loader is not being used in conjunction with LoaderManager."
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/my_negative"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/positiveTV" />

            <EditText
                android:id="@+id/positiveTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/b_notes_background"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:padding="8dp"
                android:text="single instance of this class that all clients share. Modifications to the preferences must go through an Editor object to ensure the preference values remain in a consistent state and control when they are committed to storage. Objects that are returned from the various get methods must be treated as immutable by the application. "
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/my_positive"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resumeTV" />

            <EditText
                android:id="@+id/resumeTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/b_notes_background"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:padding="8dp"
                android:text="Поиск по фильмам возвращает в том числе и «взрослый контент». Это параметр adult в ответе сервера. Создайте экран с настройками или чекбокс в меню приложения и добавьте туда настройку включения/выключения взрослого контента. Запоминайте эту настройку в SharedPreferences. "
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <LinearLayout
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/b_favorites_button"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:text="@string/save" />

                <ImageView
                    android:id="@+id/saveNoteIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_save" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>